2008-04-18 [colin]	0.18.0cvs1

	* src/gtkhtml2_viewer.c
		Use claws_unlink instead of g_unlink

2008-04-18 [paul]	0.18.0

	0.18.0 released

	* po/fi.po
	* po/fr.po
	* po/it.po
		updated by Flammie Pirinen, wwp and Andrea Spadaccini

2008-03-21 [colin]	0.17.2cvs1

	* configure.ac
		Bump version following stable release 3.3.1 :)

2008-03-15 [colin]	0.17.1cvs6

	* src/gtkhtml2_viewer.c
		Fix bug 1182, 'charset in incomplete html messages'
		Figure out better if/where to inject the charset in
		headers.

2008-03-12 [colin]	0.17.1cvs5

	* libgtkhtml/layout/htmlboxtext.c
		Fix warning

2008-02-28 [colin]	0.17.1cvs4

	* libgtkhtml/document/htmlparser.c
		Remove raw printf

2008-02-20 [paul]	0.17.1cvs3

	* src/gtkhtml2_viewer.c
		hide noticeview when clearing viewer

2008-02-11 [colin]	0.17.1cvs2

	* libgtkhtml/Makefile.am
	* libgtkhtml/css/Makefile.am
	* libgtkhtml/document/Makefile.am
	* libgtkhtml/dom/Makefile.am
	* libgtkhtml/dom/core/Makefile.am
	* libgtkhtml/dom/events/Makefile.am
	* libgtkhtml/dom/html/Makefile.am
	* libgtkhtml/dom/html/Makefile.in
	* libgtkhtml/dom/traversal/Makefile.am
	* libgtkhtml/dom/views/Makefile.am
	* libgtkhtml/graphics/Makefile.am
	* libgtkhtml/layout/Makefile.am
	* libgtkhtml/layout/html/Makefile.am
	* libgtkhtml/util/Makefile.am
	* libgtkhtml/view/Makefile.am
		And don't install includes

2008-02-11 [colin]	0.17.1cvs1

	* AUTHORS
	* Makefile.am
	* configure.ac
	* libgtkhtml/.cvsignore
	* libgtkhtml/Makefile.am
	* libgtkhtml/gtkhtml.h
	* libgtkhtml/gtkhtmlcontext.c
	* libgtkhtml/gtkhtmlcontext.h
	* libgtkhtml/a11y/.cvsignore
	* libgtkhtml/a11y/Makefile.am
	* libgtkhtml/a11y/htmlaccessiblefactory.h
	* libgtkhtml/a11y/htmlboxaccessible.c
	* libgtkhtml/a11y/htmlboxaccessible.h
	* libgtkhtml/a11y/htmlboxblockaccessible.c
	* libgtkhtml/a11y/htmlboxblockaccessible.h
	* libgtkhtml/a11y/htmlboxblocklinkaccessible.c
	* libgtkhtml/a11y/htmlboxblocklinkaccessible.h
	* libgtkhtml/a11y/htmlboxblocktextaccessible.c