@@ -94,3 +94,4 @@
 ( cvs diff -u -r 1.1.2.68 -r 1.1.2.69 src/gtkhtml2_viewer.c;  ) > 0.17.1cvs6.patchset
 ( cvs diff -u -r 1.1.2.123 -r 1.1.2.124 configure.ac;  ) > 0.17.2cvs1.patchset
 ( cvs diff -u -r 1.1.2.69 -r 1.1.2.70 src/gtkhtml2_viewer.c;  ) > 0.18.0cvs1.patchset
+( cvs diff -u -r -1.1.2.2 -r -1.1.2.3 libgtkhtml/dom/html/Makefile.in;  ) > 0.18.0cvs2.patchset
